Fix for JRUBY-607, JRUBY-151 and JRUBY-57, by Bill Dortch
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3025 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="**/CVS/*" kind="src" output="build/classes/test" path="test"/>
+	<classpathentry excluding="**/CVS/*" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/bsf.jar"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
