--- a/build.xml
+++ b/build.xml
@@ -78,7 +78,7 @@
     <exec executable="rlcodegen" input="__ragel_out">
       <arg line="-o ${src.dir}/org/jvyamlb/ResolverScanner.java"/>
     </exec>
-    <delete file="__ragel_out"/>
+    <delete file="__ragel_out" quiet="true"/>
   </target>
 
   <target name="check-for-optional-java4-packages"
@@ -153,6 +153,18 @@
     </jruby-serialize>
   </target>
 
+  <target name="generate-method-classes" depends="serialize">
+    <touch file="__empty.rb" verbose="false"/>
+    <java classname="org.jruby.Main">
+      <classpath refid="build.classpath"/>
+      <classpath path="${jruby.classes.dir}"/>
+      <sysproperty key="jruby.dump_invocations" value="${jruby.classes.dir}"/>
+      <arg value="-rjava"/>
+      <arg value="__empty.rb"/>
+    </java>
+    <delete file="__empty.rb" quiet="true"/>
+  </target>
+
   <target name="serialize.rubylib" depends="compile"
           description="Serializes the core Ruby library into Java format">
     <jruby-serialize destdir="${jruby.classes.dir}" verbose="true">
@@ -162,7 +174,7 @@
     </jruby-serialize>
   </target>
 
-  <target name="jar-jruby" depends="serialize">
+  <target name="jar-jruby" depends="generate-method-classes">
     <jar destfile="${lib.dir}/jruby.jar">
       <fileset dir="${jruby.classes.dir}">
         <include name="**/*.class"/>
@@ -179,7 +191,7 @@
   </target>
 
 
-	  <target name="jar-complete" depends="serialize" description="Create the 'complete' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
+	  <target name="jar-complete" depends="generate-method-classes" description="Create the 'complete' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
         <property name="mainclass" value="org.jruby.Main"/>
         <property name="filename" value="jruby-complete.jar"/>
         <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="${lib.dir}/jarjar-0.7.jar"/>
@@ -205,7 +217,7 @@
 	  </target>
 
 
-	  <target name="jar-light" depends="serialize" description="Create the 'light' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
+	  <target name="jar-light" depends="generate-method-classes" description="Create the 'light' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
         <property name="mainclass" value="org.jruby.Main"/>
         <property name="filename" value="jruby-light.jar"/>
         <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="${lib.dir}/jarjar-0.7.jar"/>
@@ -247,14 +259,14 @@
 	    </jarjar>
 	  </target>
 
-	  <target name="jar-console" depends="serialize" description="Create the jruby graphical console jar">
+	  <target name="jar-console" depends="generate-method-classes" description="Create the jruby graphical console jar">
           <antcall target="jar-light">
               <param name="mainclass" value="org.jruby.demo.IRBConsole"/>
               <param name="filename" value="jruby-console.jar"/>
           </antcall>
 	  </target>
 
-  <target name="jar-openssl" depends="serialize,jar-jruby" if="build.openssl">
+  <target name="jar-openssl" depends="generate-method-classes,jar-jruby" if="build.openssl">
     <jar destfile="${lib.dir}/jruby-openssl.jar">
       <fileset dir="${jruby.openssl.classes.dir}">
         <include name="**/*.class"/>
@@ -265,7 +277,7 @@
   <target name="jar" depends="jar-jruby,jar-openssl" description="Create the jruby.jar file">
   </target>
 
-  <target name="jar.standalone" depends="serialize, serialize.rubylib, jar"
+  <target name="jar.standalone" depends="generate-method-classes, serialize.rubylib, jar"
 	  description="Create a standalone jruby.jar file using libraries from RUBY_HOME/lib/ruby/1.8"/>
 
   <target name="compile-test" depends="jar" description="Compile the unit tests">
