CI's that do not fork java get lost directory-wise and Eclipse (and probably netbeans) throws a security exception by not forking generate-method-classes Also have _empty.rb get created in build dir so we do not have extra empty file in top of project on build failure
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3095 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -154,15 +154,15 @@
   </target>
 
   <target name="generate-method-classes" depends="serialize">
-    <touch file="__empty.rb" verbose="false"/>
-    <java classname="org.jruby.Main">
+    <touch file="${build.dir}/__empty.rb" verbose="false"/>
+    <java classname="org.jruby.Main" fork="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
       <sysproperty key="jruby.dump_invocations" value="${jruby.classes.dir}"/>
       <arg value="-rjava"/>
-      <arg value="__empty.rb"/>
+      <arg value="${build.dir}/__empty.rb"/>
     </java>
-    <delete file="__empty.rb" quiet="true"/>
+    <delete file="${build.dir}/__empty.rb" quiet="true"/>
   </target>
 
   <target name="serialize.rubylib" depends="compile"
