only serialize builtin/**/*.rb
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3119 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,9 @@
   <target name="serialize" depends="compile"
           description="Serializes builting Ruby libraries into Java format">
     <jruby-serialize destdir="${jruby.classes.dir}">
-      <fileset dir="${src.dir}"><patternset refid="ruby.src.pattern"/></fileset>
+      <fileset dir="${src.dir}">
+        <include name="builtin/**/*.rb"/>
+      </fileset>
     </jruby-serialize>
   </target>
 
