JRUBY-627: fix .bat files to work with pathnames w/ spaces
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3120 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -179,6 +179,10 @@
         <fileset dir="${basedir}/lib/ruby/1.8">
           <include name="**/*.rb"/>
         </fileset>
+        <fileset dir="${basedir}/src">
+          <include name="**/*.rb"/>
+          <exclude name="builtin/**/*.rb"/>
+        </fileset>
         <zipfileset src="${lib.dir}/asm-2.2.3.jar"/>
         <zipfileset src="${lib.dir}/asm-commons-2.2.3.jar"/>
         <zipfileset src="${lib.dir}/jline-0.9.91-SNAPSHOT.jar"/>
