POMs updated in trunk to 0.9.9-SNAPSHOT
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3138 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>shared</artifactId>
-    <version>0.9.8</version>
+    <version>0.9.9-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby</groupId>
   <artifactId>jruby-complete</artifactId>
   <packaging>jar</packaging>
-  <version>0.9.8</version>
+  <version>0.9.9-SNAPSHOT</version>
   <name>JRuby Complete</name>
 
   <dependencies>
