Turning on haltonfailure, for CI
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3164 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -306,7 +306,7 @@
   <target name="test" depends="copy-test-files,instrument,run-junit,coverage-report"/>
   <target name="run-junit" description="runs junit tests">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
-    <junit fork="yes" haltonfailure="false" dir="${basedir}" maxmemory="384M">
+    <junit fork="yes" haltonfailure="true" dir="${basedir}" maxmemory="384M">
       <classpath>
         <pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
