Disabling all tests in surefire explicitly
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3170 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -78,10 +78,13 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <includes>
-            <include>org/jruby/test/MainTestSuite.java</include>
-            <!-- <include>org/jruby/test/ScriptTestSuite.java</include> -->
+            <!-- <include>org/jruby/test/MainTestSuite.java</include> -->
+            <!-- <include>org/jruby/test/ScriptTestSuite.java</include>  -->
             <!-- <include>org/jruby/test/TestUnitTestSuite.java</include> -->
           </includes>
+          <excludes>
+            <exclude>**/*.java</exclude>
+          </excludes>
         </configuration>
       </plugin>
       <plugin>
