java.awt.headless=true during test runs
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3171 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -316,6 +316,7 @@
         <pathelement path="${test.dir}/requireTest.jar"/>
         <pathelement location="${test.dir}"/>
       </classpath>
+      <sysproperty key="java.awt.headless" value="true"/>
       <sysproperty key="jruby.base" value="${basedir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
