--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -180,8 +180,11 @@
                     <formatter type="plain"/>
                     <formatter type="xml"/>
                     <formatter type="brief" usefile="false"/>
+                    <sysproperty key="java.awt.headless" value="true"/>
                     <sysproperty key="basedir" value="${basedir}"/>
                     <sysproperty key="jruby.home" value="${basedir}/../.."/>
+                    <sysproperty key="jruby.base" value="${basedir}/../.."/>
+                    <sysproperty key="jruby.lib" value="${basedir}/../../lib"/>
                     <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                     <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                     <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
