Try a system property to disable InProcessScript as a way to fix some-places-failing object space test
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3174 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -185,6 +185,7 @@
                     <sysproperty key="jruby.home" value="${basedir}/../.."/>
                     <sysproperty key="jruby.base" value="${basedir}/../.."/>
                     <sysproperty key="jruby.lib" value="${basedir}/../../lib"/>
+                    <sysproperty key="jruby.inprocscript.disabled" value="true"/>
                     <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                     <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                     <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
