JRUBY-383: upgrade to jline-0.9.91
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3202 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -179,7 +179,7 @@
         </fileset>
         <zipfileset src="${lib.dir}/asm-2.2.3.jar"/>
         <zipfileset src="${lib.dir}/asm-commons-2.2.3.jar"/>
-        <zipfileset src="${lib.dir}/jline-0.9.91-SNAPSHOT.jar"/>
+        <zipfileset src="${lib.dir}/jline-0.9.91.jar"/>
         <rule pattern="org.objectweb.asm.**" result="jruby.objectweb.asm.@1"/>
         <zipfileset dir="${basedir}" prefix="META-INF/jruby.home">
           <include name="bin/*"/>
@@ -229,7 +229,7 @@
         </fileset>
           <zipfileset src="${lib.dir}/asm-2.2.3.jar"/>
           <zipfileset src="${lib.dir}/asm-commons-2.2.3.jar"/>
-          <zipfileset src="${lib.dir}/jline-0.9.91-SNAPSHOT.jar"/>
+          <zipfileset src="${lib.dir}/jline-0.9.91.jar"/>
         <manifest>
           <attribute name="Built-By" value="${user.name}"/>
           <attribute name="Main-Class" value="${mainclass}"/>
