--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -28,9 +28,7 @@
     <dependency>
       <groupId>jline</groupId>
       <artifactId>jline</artifactId>
-      <version>0.9.91-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/../../lib/jline-0.9.91-SNAPSHOT.jar</systemPath>
+      <version>0.9.91</version>
     </dependency>
     <dependency>
       <groupId>requireTest</groupId>
