- JRUBY-723: fix up hash and equals for java accessible objects,   fixing java proxy cache leak (Jonathan Paisley) - build.xml: make touch target Ant 1.6.2 compatible
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3285 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -132,7 +132,7 @@
   </target>
 
   <target name="generate-method-classes" depends="serialize">
-    <touch file="${build.dir}/__empty.rb" verbose="false"/>
+    <touch file="${build.dir}/__empty.rb"/>
     <java classname="org.jruby.Main" fork="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
