--- a/build.xml
+++ b/build.xml
@@ -153,7 +153,7 @@
   </target>
 
   <target name="jar-jruby" depends="generate-method-classes">
-    <jar destfile="${lib.dir}/jruby.jar">
+    <jar destfile="${lib.dir}/jruby.jar" compress="true">
       <fileset dir="${jruby.classes.dir}">
         <exclude name="org/jruby/util/ant/**/*.class"/>
       </fileset>
