--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -2,3 +2,5 @@ version.ruby.major=1.8
 version.ruby=1.8.5
 release.date=0
 version.jruby=0.9.8
+build.jruby=@os.arch@-java@java.specification.version@
+revision.jruby=$Revision$
